--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<p class="text10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit ex neque nostrum, quo
 		laboriosam iste obcaecati nobis harum culpa aspernatur voluptatibus enim soluta distinctio exercitationem sequi
 		praesentium, possimus itaque? Accusamus!</p>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam nemo temporibus molestias, enim ipsa sint est maxime odit, minus provident dicta quo cum adipisci optio, ab harum? Molestiae, quo omnis!</p>
 	<br>
 </body>
 
